Building the index.html page structure and adding some styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,45 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="heroimage">
+        <h1>Why visit New York</h1>
+        <img src="images/newyork5.jpg" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure expedita dolorem eum optio eius illum cupiditate saepe aut ea ipsum, doloribus reprehenderit et eveniet corporis id voluptatibus magnam deserunt excepturi.</p>
+    </div>
+    <div class="cards">
+        <div class="card card1">
+            <div class="container">
+                <img src="images/newyork1.jpg" alt="">
+            </div>
+            <div class="details">
+                <h3>New York</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt ullam la officia labore porro est architecto eligendi?</p>
+            </div>
+
+        </div>
+        <div class="card card2">
+            <div class="container">
+                <img src="images/newyork2.jpg" alt="">
+            </div>
+            <div class="details">
+                <h3>New York</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt ullam la officia labore porro est architecto eligendi?</p>
+            </div>
+
+        </div>
+        <div class="card card3">
+            <div class="container">
+                <img src="images/newyork4.jpg" alt="">
+            </div>
+            <div class="details">
+                <h3>New York</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt ullam la officia labore porro est architecto eligendi?</p>
+            </div>
+
+        </div>
+
+
+
+    </div>
 </body>
 </html>
