Building a dropdown menu structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="dropdown">
+        <button class="dropbtn">Home</button>
+        <div class="dropdown-content">
+            <a href="#">About</a>
+            <a href="#">Info</a>
+            <a href="#">Map</a>
+        </div>
+    </div>
     <div class="heroimage">
         <h1>Why visit New York</h1>
         <img src="images/newyork5.jpg" alt="">
