Adding functionality to the map api

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="dropdown-content">
             <a href="#">About</a>
             <a href="#">Info</a>
-            <a href="#">Map</a>
+            <a href="map.html">Map</a>
         </div>
     </div>
     <div class="heroimage">
@@ -56,5 +56,6 @@
 
 
     </div>
+    <script>map.html</script>
 </body>
 </html>
