Adding more functions and styles to the map page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="dropdown">
         <button class="dropbtn">Home</button>
         <div class="dropdown-content">
-            <a href="#">About</a>
+            <a href="index.html">Home</a>
             <a href="#">Info</a>
             <a href="map.html">Map</a>
         </div>
