Building info page and adding some styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button class="dropbtn">Home</button>
         <div class="dropdown-content">
             <a href="index.html">Home</a>
-            <a href="#">Info</a>
+            <a href="info.html">Info</a>
             <a href="map.html">Map</a>
         </div>
     </div>
